# RapidPipeline-for-Blender

./: .gitignore  COPYING.md  README.md  __init__.py  about_dialog.py  basic_elements.py  blender_manifest.toml  cad_import.py  changelog.md  compound_elements.py  gui_commons.py  json_utils.py  license_manager.py  main_widget.py  plugin_metadata.json  progress_dialog.py  pyproject.toml  run_rpde.py  scene_utils.py
resources/: schema.json  settings_example.json  ui_rules.json
resources/CAD_import/: rpdp_dcc_plugin_cad_settings.json
resources/images/: resources.qrc
